# FullMixSculptorMinimal

.github/workflows/: CMakeLists.txt  windows.yml
.github/workflows/Source/: PluginMain.cpp
.github/workflows/Source/Source/Source/: PluginProcessor.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginMain.cpp
ource/: PluginProcessor.h
